recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:4: error: not found: value lenght
  lenght=lenght+increment
  ^Spiral:5: error: not found: value spirale
  spirale(steps-1,angle,length,increment)
  ^